# static-shared-and-global-symbol

./: A.cpp  A.hpp  B.cpp  B.hpp  C.cpp  CMakeLists.txt
